remove resources from nav and use 404 error... until client has resources to show

--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -44,16 +44,16 @@
             <span>Subscribe</span>
           </a>
         </li>
-        <li class="nav-item">
+        <!-- <li class="nav-item">
           <a
             class="navitem nav-link"
-            aria-current="<%= path==="/resources" ? "page" : "false" %>"
+            aria-current="<%# path==="/resources" ? "page" : "false" %>"
             href="/resources"
           >
             <i class="navicon3 fa-sharp fa-solid fa-book"></i>
             <span>Resources</span>
           </a>
-        </li>
+        </li> -->
         <li class="nav-item">
           <a
             class="navitem nav-link"
