--- a/views/pages/profile.ejs
+++ b/views/pages/profile.ejs
@@ -18,19 +18,22 @@
           </div>
         </section>
         <section class="lo-profile-card-text-side">
-          <% if (name) { %>
-          <h5><%= name %></h5>
-          <% } %> <% if (email) { %>
+          <% if (firstName) { %>
+          <h5><%= firstName %></h5>
+          <% } %> 
+          <% if (lastName) { %>
+          <h5><%= lastName %></h5>
+          <% } %>           
+          <% if (email) { %>
           <p>
             <a href="mailto:<%=email%>"><%=email%></a>
           </p>
-          <% } %> <% if (createdAt) { %>
+          <% } %> 
+          <% if (date) { %>
           <p>
-            Member since <%= createdAt.toLocaleDateString("en-us", {
+            Member since <%= date.toLocaleDateString("en-us", {
             year:'numeric', month: 'long', day: 'numeric' }) %>
           </p>
-          <% } else if (date) { %>
-          <p>Member since <%= date %></p>
           <% } %>
         </section>
         <aside class="lo-dot-menu">
