--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -13,8 +13,12 @@
         </span>
         <form class="form" action="/register" method="POST">
           <div>
-            <label for="name">Name</label>
-            <input type="text" id="name" name="name" required />
+            <label for="firstName">First Name</label>
+            <input type="text" id="firstName" name="firstName" required />
+          </div>
+          <div>
+            <label for="lastName">Last Name</label>
+            <input type="text" id="lastName" name="lastName" required />
           </div>
           <div>
             <label for="email">Email</label>
