--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -11,11 +11,11 @@
   </p>
   <label for="fname" class="form-label">First Name</label>
   <input type="text" class="fnameinput form-control" name="fname"
-  autocomplete="given-name" value="<%= isAuthenticated ? name : "" %>" required
+  autocomplete="given-name" value="<%= isAuthenticated ? firstName : "" %>" required
   />
   <label for="lname" class="form-label">Last Name</label>
   <input type="text" class="lnameinput form-control" name="lname"
-  autocomplete="family-name" value="<%= isAuthenticated ? name : "" %>" required
+  autocomplete="family-name" value="<%= isAuthenticated ? lastName : "" %>" required
   />
   <label for="email" class="form-label">Email</label>
   <input 
