--- a/views/pages/register.ejs
+++ b/views/pages/register.ejs
@@ -10,6 +10,7 @@
       <div class="lo-container lo-container-small">
         <span class="lo-error-message">
           <% if (regError) { %> <%=regError %> <% } %>
+          <% if (existError) { %> <%=existError %> <% } %>
         </span>
         <form class="form" action="/register" method="POST">
           <div>
