--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,4 +1,6 @@
 <meta charset="utf-8" />
+<!-- <meta name="viewport" content="width=device-width, initial-scale=1" /> -->
+
 <title>BOE | <%= typeof title != 'undefined' ? title : 'BOE' %></title>
 
 <!-- Boostrap CSS -->
