remove duplicated code and added more trade values

--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -47,50 +47,27 @@
       placeholder="Enter Trade 1"
       name="trade1"
       autocomplete="off"
-      list="trade1"
+      list="trade-options"
       required
     />
-    <datalist id="trade1">
-      <option value="electrical"></option>
-      <option value="welding"></option>
-      <option value="programming"></option>
-      <option value="cosmetology"></option>
-      <option value="construction"></option>
-      <option value="aviation"></option>
-      <option value="data analytics"></option>
-      <option value="plumbing"></option>
-      <option value="nursing"></option>
-      <option value="automotive"></option>
-    </datalist>
 
     <input
       type="text"
       placeholder="Enter Trade 2 (optional)"
       autocomplete="off"
       name="trade2"
-      list="trade2"
+      list="trade-options"
     />
-    <datalist id="trade2">
-      <option value="electrical"></option>
-      <option value="welding"></option>
-      <option value="programming"></option>
-      <option value="cosmetology"></option>
-      <option value="construction"></option>
-      <option value="aviation"></option>
-      <option value="data analytics"></option>
-      <option value="plumbing"></option>
-      <option value="nursing"></option>
-      <option value="automotive"></option>
-    </datalist>
 
     <input
       type="text"
       placeholder="Enter Trade 3 (optional)"
       autocomplete="off"
       name="trade3"
-      list="trade3"
+      list="trade-options"
     />
-    <datalist id="trade3">
+
+    <datalist id="trade-options">
       <option value="electrical"></option>
       <option value="welding"></option>
       <option value="programming"></option>
@@ -100,7 +77,12 @@
       <option value="data analytics"></option>
       <option value="plumbing"></option>
       <option value="nursing"></option>
-      <option value="automotive"></option>
+      <option value="automotive technician"></option>
+      <option value="ux/ui"></option>
+      <option value="pilot"></option>
+      <option value="flight instructor"></option>
+      <option value="patient care technician"></option>
+      <option value="barbering"></option>
     </datalist>
   </section>
   <button type="submit" class="signupbtn">Subscribe</button>
