--- a/views/partials/form-subscribe.ejs
+++ b/views/partials/form-subscribe.ejs
@@ -39,51 +39,52 @@
   <br />
   <hr />
   <section class="lo-trade-section">
-    <label for="trade1" class="form-label"
-      >List up to 3 trades that interest you:</label
-    >
-    <input
-      type="text"
-      placeholder="Enter Trade 1"
-      name="trade1"
-      autocomplete="off"
-      list="trade-options"
-      required
-    />
+    <fieldset>
+      <legend>List up to 3 trades that interest you:</legend>
 
-    <input
-      type="text"
-      placeholder="Enter Trade 2 (optional)"
-      autocomplete="off"
-      name="trade2"
-      list="trade-options"
-    />
+      <input
+        type="text"
+        placeholder="Enter Trade 1"
+        name="trade1"
+        autocomplete="off"
+        list="trade-options"
+        required
+      />
 
-    <input
-      type="text"
-      placeholder="Enter Trade 3 (optional)"
-      autocomplete="off"
-      name="trade3"
-      list="trade-options"
-    />
+      <input
+        type="text"
+        placeholder="Enter Trade 2 (optional)"
+        autocomplete="off"
+        name="trade2"
+        list="trade-options"
+      />
 
-    <datalist id="trade-options">
-      <option value="electrical"></option>
-      <option value="welding"></option>
-      <option value="programming"></option>
-      <option value="cosmetology"></option>
-      <option value="construction"></option>
-      <option value="aviation"></option>
-      <option value="data analytics"></option>
-      <option value="plumbing"></option>
-      <option value="nursing"></option>
-      <option value="automotive technician"></option>
-      <option value="ux/ui"></option>
-      <option value="pilot"></option>
-      <option value="flight instructor"></option>
-      <option value="patient care technician"></option>
-      <option value="barbering"></option>
-    </datalist>
+      <input
+        type="text"
+        placeholder="Enter Trade 3 (optional)"
+        autocomplete="off"
+        name="trade3"
+        list="trade-options"
+      />
+
+      <datalist id="trade-options">
+        <option value="electrical"></option>
+        <option value="welding"></option>
+        <option value="programming"></option>
+        <option value="cosmetology"></option>
+        <option value="construction"></option>
+        <option value="aviation"></option>
+        <option value="data analytics"></option>
+        <option value="plumbing"></option>
+        <option value="nursing"></option>
+        <option value="automotive technician"></option>
+        <option value="ux/ui"></option>
+        <option value="pilot"></option>
+        <option value="flight instructor"></option>
+        <option value="patient care technician"></option>
+        <option value="barbering"></option>
+      </datalist>
+    </fieldset>
   </section>
   <button type="submit" class="signupbtn">Subscribe</button>
 </form>
