--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -464,7 +464,18 @@ button.nav-btn.fa-sign-in {
 
 .lo-container form label {
   margin-bottom: 0.5rem;
-  display: inline-block;
+  display: block;
+}
+
+.lo-container select {
+  font-size: 1em;
+  padding: 0;
+  width: 100%;
+  border-radius: 5px;
+  height: 35px;
+  line-height: 1em;
+  margin: 2px 0 15px;
+  border: 1px solid var(--color-border);
 }
 
 /* ------------------------------ SUBSCRIBE GALLERY ------------------------------ */
