changed school schema to single string program vs array. Changed ejs to reflect change

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -29,7 +29,7 @@
         <section class="basiclistitemtextcontainer lo-list-text-side">
           <h6 class="basiclistitemOrganization"><%= school.name %></h6>
           <p class="basiclistitemCategory"><%= school.type %></p>
-          <p class="basiclistitemTrade"><%= school.programs %></p>
+          <p class="basiclistitemTrade"><%= school.program %></p>
           <p class="basiclistitemCity">
             <%= school.location.city %>, <%= school.location.state %>
           </p>
