--- a/views/partials/listings-depth.ejs
+++ b/views/partials/listings-depth.ejs
@@ -35,8 +35,8 @@
       <h6 class="descriptionlabel">Description</h6>
       <p class="description"><%= school.description %></p>
       <hr />
-      <h6 class="tradesofferedlabel">Programs</h6>
-      <p class="tradesoffered"><%= school.programs %></p>
+      <h6 class="tradesofferedlabel">Program</h6>
+      <p class="tradesoffered"><%= school.program %></p>
       <hr />
       <%- include('./point-of-contact', {school: school}); %>
       <hr />
