added aria-label and alt to like-button for accesibility and seo

--- a/views/partials/listings-basic.ejs
+++ b/views/partials/listings-basic.ejs
@@ -38,8 +38,11 @@
       <aside class="lo-save-listing">
         <form action="/user-likes" method="POST">
           <input type="hidden" name="school_id" value= "<%= school._id %>" />
-          <button class="icon-button" type="submit">
-            <i class="fa-solid fa-heart <%= school.is_liked ? 'liked' : '' %>"></i>          
+          <button class="icon-button" type="submit" aria-label="like" alt="like">
+            <i class="fa-solid fa-heart <%= school.is_liked ? 'liked' : '' %>"
+               aria-label="like"
+               alt="like"
+            ></i>          
           </button>
         </form>
       </aside>
