--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,18 +1,11 @@
-<footer>
+<footer class="fixed-bottom">
   <div class="footercontainer">
-    <a target="_blank" href=""
-      ><i class="footericon fa-brands fa-instagram"></i
-    ></a>
-    <a target="_blank" href=""
-      ><i class="footericon fa-brands fa-linkedin"></i
-    ></a>
-    <i
-      onclick="sendemail()"
-      style="cursor: pointer"
-      class="footericon fa-solid fa-envelope"
-    ></i>
+    <a target="_blank" href="https://www.instagram.com/boepartners/">
+      <i class="footericon fa-brands fa-instagram"></i>
+    </a>
+    <a href="mailto:javier@boepartners">
+      <i style="cursor: pointer" class="footericon fa-solid fa-envelope"></i>
+    </a>
   </div>
 </footer>
-<!-- External JavaScript and jQuery -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+ 
