All in-depth school displays look the same now, even Boca Code Academy. Added min-width to ul lists to avoid schools with shorter descriptions from having narrower displays.

--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -609,6 +609,7 @@ section.lo-section-main .carousel__image {
 .lo-in-depth-list ul,
 .lo-favorites-list ul {
   padding: 0;
+  min-width: 100%;
 }
 
 .lo-body section.lo-section-half .lo-basic-list {
