--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -1154,6 +1154,7 @@ section.lo-favorites-list-empty p {
     justify-content: center;
   }
 
+  section.lo-section-half .lo-in-depth-list .lo-logo-wrapper,
   .lo-profile-card.lo-profile-card-sm-h .lo-avatar-wrapper,
   section.lo-section-half .lo-basic-list .lo-logo-wrapper,
   section.lo-favorites-list .lo-logo-wrapper {
