--- a/public/css/lo.css
+++ b/public/css/lo.css
@@ -381,6 +381,16 @@ button.nav-btn.fa-sign-in {
 .lo-body .lo-container textarea {
   margin: 2px 0 15px;
   border: 1px solid var(--color-border);
+  width: 100%;
+}
+
+input::file-selector-button {
+  height: 100%;
+  background-color: var(--logo-color);
+  border: none;
+  color: var(--color-link-light-hover);
+  cursor: pointer;
+  border-radius: 5px;
 }
 
 .lo-body .lo-container input,
@@ -402,6 +412,7 @@ button.nav-btn.fa-sign-in {
   cursor: pointer;
 }
 
+input::file-selector-button:hover,
 .lo-body .lo-container button:hover {
   background-color: var(--logo-color-hover);
 }
@@ -476,6 +487,7 @@ button.nav-btn.fa-sign-in {
   line-height: 1em;
   margin: 2px 0 15px;
   border: 1px solid var(--color-border);
+  background-color: transparent;
 }
 
 /* ------------------------------ SUBSCRIBE GALLERY ------------------------------ */
@@ -1173,7 +1185,8 @@ section.lo-favorites-list-empty p {
   }
 
   .lo-body .lo-container input,
-  .lo-body .lo-container button {
+  .lo-body .lo-container button,
+  .lo-container select {
     height: 2em;
     margin-bottom: 1em;
   }
